<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    >

    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:paddingTop="17dp"
        android:background="@drawable/round_rect_bg"
        >
        
        <TextView
            android:id="@+id/hintTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:textColor="@color/red_text"
			android:textSize="22px"
            android:text="@string/hint_title"
            android:textStyle="bold"
            />
        
        <TextView
            android:id="@+id/hintContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/hintTitleText"
			android:textColor="@color/red_text"
			android:textSize="22px"
            android:text="@string/hint_content"
            android:layout_marginLeft="10dp"
            />
        
    </RelativeLayout>
    
    <TextView
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray"
        android:layout_below="@id/bottomLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    
    <RelativeLayout
        android:id="@+id/bottomLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        >
        
        <ImageView
            android:id="@+id/qrImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/code_test"
            android:layout_margin="10dp"
            />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/qrImage"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:paddingRight="10dp"
            android:text="@string/ads_str"
            />
        
    </RelativeLayout>
    
    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider1"
        android:layout_above="@id/bottomLayout2"
        android:numColumns="2"
        android:layout_margin="20dp"
        android:horizontalSpacing="20dp"
        android:verticalSpacing="20dp"
        ></GridView>

</RelativeLayout>
